--- a/contenance.html
+++ b/contenance.html
@@ -56,12 +56,11 @@
         </div>
         
         <div class = "container-contenance">
-        <div id="parallax1" class="parallax"></div>
-        <div class="parallax-text-container">
-            <div class="parallax-text">The word "Contenance" means self-control. In Latin „Continentia“ is a derivation of the verb continēre, which means “to hold together and keep under control.</div>
+        <div id="text-contenance">
+        The word "Contenance" means self-control. In Latin „Continentia“ is a derivation of the verb continēre, which means “to hold together and keep under control.
         </div>
         <div id="parallax2" class="parallax"></div>
-        <div class="parallax-text-container">
+        <div class="parallax-text-container" id="second-parallax-text">
             <div class="parallax-text">An elephant is born gifted with natural wisdom, strength, and leadership abilities. You think things through before saying or acting on anything. You know when to state your piece and you know when to speak your mind. You are patient and perservering. You work tirelessly to achieve something that you most desire. You always think of the good of everybody, not just your own.</div>
         </div>
         <div id="parallax3" class="parallax"></div>
