--- a/korksetnew.html
+++ b/korksetnew.html
@@ -61,61 +61,70 @@
                     <img class="image-product" src="./media/korkset2.jpg" alt="Italian Trulli">
                     <div class="product-info product-info-amazon">        
                             <div class="info-title">Contenance.® Faszien Yoga Set – robust &amp; rutschfest – Rolle, Bälle, Rad und Block aus Naturkork.</div>
-                            <ul class="info-list">
-                                    <li>OPTIMALE SET-KOMBINATION – Ob als Stütze bei Balance-Übungen, als Unterlage für den Rücken, zum Ausrollen der Muskelfaszien oder als nützliches Hilfsmittel beim Erlernen neuer Yoga Übungen: Dieses optimal abgestimmte Set ist grundsätzlich das ideale Yoga-Zubehör für jeden Beginner und Fortgeschrittenen</li>
-                                    <li>IN GYMS &amp; STUDIOS BELIEBT – Der angenehme Geruch des Korks aufgrund seiner antibakteriellen und antiallergischen Eigenschaften, und die langlebige Beständigkeit des Materials, machen das Kork-Yoga Set zu einem beliebten Trainingsbegleiter in vielen Gyms &amp; Studios. Da Kork ein natürlicher Wachstums Hemmer für Bakterien, Pilz und Schimmel ist, bleibt die Reinigung des Materials nur ein minimaler Aufwand!</li>
-                                    <li>ROBUST &amp; RUTSCHFEST – Kork enthält eine natürliche wachsartige Substanz, die kein Wasser oder Gas absorbiert, und damit sowohl seine Verrottung verhindert, als auch bei Feuchtigkeit für festen Grip sorgt. Wenn Kork warm oder feucht wird, nehmen seine taktilen Eigenschaften zu. Genießen Sie das wertvolle Gefühl von Naturkork: Latex-frei, Plastik-frei und 100% natürlich!</li>
-                                    <li>UMWELTFREUNDLICH &amp; NACHHALTIG – Keine Bäume werden gefällt! Kork ist ein natürlich nachwachsender Rohstoff, der aus der regenerativen Rinde der Korkeiche gewonnen wird und keinerlei negative Auswirkung auf das Ökosystem hat: So können Korkeichen bis zu 4 Mal mehr Kork produzieren und das klimaschädliche CO2 binden – eine große Unterstützung der Artenvielfalt in Waldlebensräumen. Es gibt kein vergleichbares Material mit solch einzigartigen Eigenschaften und Besonderheiten!</li>
-                                    <li>PREMIUM QUALITÄT – Dank professioneller deutscher Produktentwicklung und hoher Qualitätsstandards ist das Kork-Yoga Set ein absoluter Spitzenreiter in Sachen Hochwertigkeit, Gesundheit und Umweltbewusstsein. Ein sehr aufwendiges Verfahren der Korkstoffgewinnung und eine maßgetreue Formgebung mit Hochdruckpresse und Schleifwerk, bringen ein besonders hautfreundliches und nachhaltiges Produkt hervor – ausgestattet mit selbst-reinigenden Eigenschaften und einer langen Haltbarkeitsdauer.</li>
-                                </ul>        
+                            <div class="bullet-head">&#10004; OPTIMALE SET-KOMBINATION</div>    
+                            <div class="bullet-body">Ob als Stütze bei Balance-Übungen, als Unterlage für den Rücken, zum Ausrollen der Muskelfaszien oder als nützliches Hilfsmittel beim Erlernen neuer Yoga Übungen: Dieses optimal abgestimmte Set ist grundsätzlich das ideale Yoga-Zubehör für jeden Beginner und Fortgeschrittenen.</div>
+                            <div class="bullet-head">&#10004; IN GYMS &amp; STUDIOS BELIEBT</div>    
+                            <div class="bullet-body">Der angenehme Geruch des Korks aufgrund seiner antibakteriellen und antiallergischen Eigenschaften, und die langlebige Beständigkeit des Materials, machen das Kork-Yoga Set zu einem beliebten Trainingsbegleiter in vielen Gyms & Studios. Da Kork ein natürlicher Wachstums Hemmer für Bakterien, Pilz und Schimmel ist, bleibt die Reinigung des Materials nur ein minimaler Aufwand!</div>
+                            <div class="bullet-head">&#10004; ROBUST &amp; RUTSCHFEST</div>    
+                            <div class="bullet-body-last">Kork enthält eine natürliche wachsartige Substanz, die kein Wasser oder Gas absorbiert, und damit sowohl seine Verrottung verhindert, als auch bei Feuchtigkeit für festen Grip sorgt. Wenn Kork warm oder feucht wird, nehmen seine taktilen Eigenschaften zu. Genießen Sie das wertvolle Gefühl von Naturkork: Latex-frei, Plastik-frei und 100% natürlich!</div>
                     </div>
                 </div>
                 <div class="container-product container-product-small">
                     <img class="image-product image-product-small" src="./media/korkset4.jpg" alt="Italian Trulli">
                     <div class="product-info product-info-right">
-                        <div class="info-container"></div>
                         <div class="info-title">FLEXIBILITÄT &amp; MOBILITÄT</div>
                         <div class="info-subtitle">Das Yoga Kork Rad</div>
-                        <div class="info-text">Das Yoga Rad, auch Yoga Wheel genannt, lässt sich als neues und innovatives Produkt vorteilhaft für die Stärkung deiner Flexibilität und Mobilität einsetzen. Es erlaubt dir sanft deine Stellung zu verbessern und deine Brust, Schultern, Rücken und Hüften weiter zu öffnen. Mit 33cm im Durchmesser passt das Rad mühelos zwischen deine Schulterblätter und behindert dich nicht in der Beweglichkeit.</div>
+                        <div class="info-text">Das Yoga Rad, auch Yoga Wheel genannt, lässt sich als neues und innovatives Produkt vorteilhaft für die Stärkung deiner Flexibilität und Mobilität einsetzen. Es erlaubt dir sanft deine Stellung zu verbessern und deine Brust, Schultern, Rücken und Hüften weiter zu öffnen. Mit 33cm im Durchmesser passt das Rad mühelos zwischen deine Schulterblätter und behindert dich nicht in der Beweglichkeit. Eines der größten Vorteile, die das Rad bietet, ist, dass du deine Brustwirbelsäule damit viel flexibler machen und deine Rückbeugen für die Yoga Praxis revolutionieren kannst, denn du lernst dabei wie du deine Brustwirbelsäule ebenmäßig und sicher in eine Rückbeuge bringst.</div>
                     </div>
                 </div>
                 <div class="container-product container-product-small">
                     <div class="product-info">
-                        <div class="info-container"></div>
                         <div class="info-title">STABILITÄT &amp; GLEICHGEWICHT</div>
                         <div class="info-subtitle">Der Yoga Kork Block</div>
-                        <div class="info-text">Yoga Kork Blöcke unterstützen dabei die Körperhaltung zu stabilisieren und einen sicheren Stand zu erlangen, wodurch Verletzung und Überbelastung vorgebeugt und jedem erlaubt wird sicher und gestützt in schwierige Haltungen zukommen und das Potential aus jeder Übung auszuschöpfen. </div>
+                        <div class="info-text">Yoga Kork Blöcke unterstützen dabei die Körperhaltung zu stabilisieren und einen sicheren Stand zu erlangen, wodurch Verletzung und Überbelastung vorgebeugt und jedem erlaubt wird sicher und gestützt in schwierige Haltungen zukommen und das Potential aus jeder Übung auszuschöpfen. Im Vergleich zu den üblichen Schaumstoffblöcken, ist ein Block aus Naturkork wesentlich robuster und schwerer, was ihn zu einem sehr stabilen und treuen Begleiter deiner Yoga Praxis macht. Seine drei unterschiedlich langen Seiten können dabei je nach Belieben oder Haltungsgrad eingesetzt werden, beispielsweise um einzelne Übungen zu intensivieren oder tiefer in die Dehnung zu gelangen.</div>
                     </div>
                     <img class="image-product image-product-small-right" src="./media/korkset5.jpg" alt="Italian Trulli">
                 </div>
                 <div class="container-product container-product-small">
                     <img class="image-product image-product-small" src="./media/korkset3.jpg" alt="Italian Trulli">
                     <div class="product-info product-info-right">
-                        <div class="info-container"></div>
                         <div class="info-title">VORBEREITUNG &amp; REGENERATION</div>
                         <div class="info-subtitle">Die Yoga Kork Rolle</div>
-                        <div class="info-text">Die Faszien rücken immer mehr in den Vordergrund. Als bindegewebiges Netzwerk durchziehen sie den gesamten Körper und umhüllen dabei unsere Muskeln und Organe, wodurch sie die einzelnen Strukturen innerhalb unseres Körpers voneinander abgrenzen und verbinden. Sie verleihem unserem Körper Form, Stabilität und Flexibilität.</div>
+                        <div class="info-text">Die Faszien rücken immer mehr in den Vordergrund. Sie verleihem unserem Körper Form, Stabilität und Flexibilität, und versorgen unsere Zellen mit den lebensnotwendigen Nährstoffen. Ist das Fasziengewebe beeinträchtigt, kann es zu verschiedensten Schmerzen im gesamten Körper kommen, wobei häufig Nacken, Schultern und Rücken betroffen sind. Neben Stretching und Yin Yoga, ist ein Faszien-Training mit Korkbällen und -rolle eine effiziente und effektive Methode um deine Faszien gesund und beweglich zu halten und das Bindegewebe zu mobilisieren sowie Verspannungen und Schmerzen aufzulösen.</div>
                     </div>
                 </div>
                 <div class="container-product container-product-small">
                     <div class="product-info">
-                        <div class="info-container"></div>
                         <div class="info-title">ENTSPANNUNG &amp; DURCHBLUTUNG</div>
                         <div class="info-subtitle">Die Yoga Kork Bälle</div>
-                        <div class="info-text">Im Unterschied zur Korkrolle, ist mit den Korkbällen eine noch gezieltere Behandlung in den einzelnen Körpersegmenten möglich. Durch gezielte Stimulation der Gewebestrukturen wird die Durchblutung angeregt sowie die Nährstoffverteilung innerhalb des Gewebes gefördert.</div>
+                        <div class="info-text">Im Unterschied zur Korkrolle, ist mit den Korkbällen eine noch gezieltere Behandlung in den einzelnen Körpersegmenten möglich. Durch gezielte Stimulation der Gewebestrukturen wird die Durchblutung angeregt sowie die Nährstoffverteilung innerhalb des Gewebes gefördert. Ein regelmäßiges Faszien-Training trägt zu einer spürbaren Steigerung und Erhaltung von Elastizität und Leistungsvermögen der Muskulatur bei sowie einer aktiven und gezielten Regeneration der Muskeln und des Bindegewebes. Perfekt zum Auf- und Abwärmen beim Sport oder auch zur wohltuenden Entspannung im Alltag.</div>
                     </div>
                     <img class="image-product image-product-small-right" src="./media/korkset6.jpg" alt="Italian Trulli">
                 </div>
+                <div class="container-product container-product-amazon">
+                        <div class="product-info product-info-amazon">
+                                <a target="_blank" class="link link-amazon" href="https://www.amazon.de/Contenance-%C2%AE-Premium-Kork-Yoga-Set-Nachhaltig/dp/B07V9SSQDN/ref=sr_1_2?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=contenance+kork&qid=1601640143&sr=8-2">
+                                    <img class="image-amazon" src="./media/amazon.svg" alt="Italian Trulli">
+                                    <div class="buy-amazon">Jetzt Kaufen</div>
+                                </a>
+                        </div>
+                    </div>
                 <div class="container-product container-product-amazon">
                         <img class="image-product" src="./media/korkset1.jpg" alt="Italian Trulli">
                     </div>
                 <div class="container-product container-product-small">
                     <img class="image-product image-product-small" src="./media/cork.jpg" alt="Italian Trulli">
                     <div class="product-info product-info-right">
-                        <div class="info-container"></div>
                         <div class="info-title">Robust &amp; Nachhaltig: Genießen Sie das wertvolle Gefühl von Naturkork</div>
-                        <div class="info-text">Nachhaltigkeit gehört zum absoluten Kern unserer Arbeit. Da die expansive Nutzung der Natur die Tragfähigkeit der Erde übersteigt, werden wir ohne Nachhaltigkeit nicht mehr in der Lage sein, unseren Kindern eine lebenswerte und gestaltbare Welt zu hinterlassen.  Als naturfreundliches Sport-Unternehmen aus Berlin setzen wir nachhaltige Entwicklung in den Fokus unserer Praxis und leisten einen Beitrag dazu, dass eine nachhaltige Welt Wirklichkeit wird.</div>
+                        <div class="info-text">Nachhaltigkeit gehört zum absoluten Kern unserer Arbeit. Da die expansive Nutzung der Natur die Tragfähigkeit der Erde übersteigt, werden wir ohne Nachhaltigkeit nicht mehr in der Lage sein, unseren Kindern eine lebenswerte und gestaltbare Welt zu hinterlassen. Als naturfreundliches Sport-Unternehmen aus Berlin setzen wir nachhaltige Entwicklung in den Fokus unserer Praxis und leisten einen Beitrag dazu, dass eine nachhaltige Welt Wirklichkeit wird.</div>
                     </div>
+                </div>
+                <div class="container-product container-product-small">
+                    <div class="product-info">
+                        <div class="info-title">Sicherheit</div>
+                        <div class="info-text">Dank professioneller deutscher Produktentwicklung und hoher Qualitätsstandards ist das Kork-Yoga Set ein absoluter Spitzenreiter in Sachen Hochwertigkeit, Gesundheit und Umweltbewusstsein. Ein sehr aufwendiges Verfahren der Korkstoffgewinnung und eine maßgetreue Formgebung mit Hochdruckpresse und Schleifwerk, bringen ein besonders hautfreundliches und nachhaltiges Produkt hervor – ausgestattet mit selbst-reinigenden Eigenschaften und einer langen Haltbarkeitsdauer.</div>
+                    </div>
+                    <img class="image-product image-product-small-right" id="image-sicherheit" src="./media/logo9.png" alt="Italian Trulli">
                 </div>
                 <div class="container-product container-product-amazon">
                         <div class="product-info product-info-amazon">
