--- a/indexnew.html
+++ b/indexnew.html
@@ -55,7 +55,7 @@
         </div>
             <div class="container-full">
                 <img id="image-home" src="./media/elefant1.jpg" alt="Italian Trulli">
-                <div id="slogan">INSIDE MOVES.</div>
+                <div id="slogan">LIFT YOUR VIBE.</div>
             </div>
         <div id = "footer-container">
             <div id = "footer">
